welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Program'
override def run(){
             ^